@@ -197,7 +197,7 @@ module Nadoka
 
     # channel message
     def clog ch, msg, nostamp = false
-      clog_msgobj ch, make_msgobj(msg, 'SIMPLE', nostamp)
+      clog_msgobj ch, make_msgobj(msg, 'SIMPLE', nostamp, ch)
     end
 
     # other irc log message
@@ -206,12 +206,13 @@ module Nadoka
     end
 
     #########################################
-    def make_msgobj msg, type = msg.command, nostamp = false
+    def make_msgobj msg, type = msg.command, nostamp = false, ch = nil
       msgobj = {
         :time    => Time.now,
         :type    => type,
         :orig    => msg,
         :nostamp => nostamp,
+        :ch      => ch,
       }
 
       msgobj
